<resources>
    <string name="app_name">РИТМ</string>
    <string name="button">РАССЧИТАТЬ</string>
    <string name="Title">ВВЕДИТЕ ВАШИ ОЦЕНКИ</string>
    <string name="_1">ПК 1</string>
    <string name="tk_1">TK 1</string>
    <string name="tk_2">TK 2</string>
    <string name="pk_2">ПК 2</string>
    <string name="zero">0</string>
    <string name="needmark">ЖЕЛАЕМАЯ ОЦЕНКА В ЗАЧЕТКУ</string>
    <string name="SI">Рейтинг СИ</string>
    <string name="Exam">Экзамен</string>
    <string name="NeedMarkHint">5</string>
    <string name="Clear">Сбросить</string>
    <string name="todo">TODO</string>
    <string name="marks">Оценки</string>
    <string name="home">Рейтинг</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">MARKS</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="SignOut">Выйти из аккаунта</string>
    <string name="ResultMark">ОЦЕНКА</string>
    <string name="ExamMark">ЭКЗ</string>
    <string name="RatingSi">СИ</string>
    <string name="Subject">Дисциплина</string>
    <string name="Save">Сохранить</string>
    <string name="PasswordHint">Пароль</string>
    <string name="LoginHint">Логин</string>
    <string name="MarksFragmentTitle">ОЦЕНКИ ПО ДИСЦИПЛИНАМ</string>
    <string name="Notes">ЗАМЕТКИ</string>
    <string name="notes">Заметки</string>
</resources>
