<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/Title"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="25sp"
            android:typeface="sans" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/TK1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tk_1"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="20sp"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/TK_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/zero"
                    android:inputType="numberDecimal"
                    android:textColor="@color/White"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/PK1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_1"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="20sp"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/PK_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/zero"
                    android:inputType="numberDecimal"
                    android:textColor="@color/White"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/TK2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tk_2"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="20sp"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/TK_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/zero"
                    android:inputType="numberDecimal"
                    android:textColor="@color/White"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/PK2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pk_2"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="20sp"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/PK_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/zero"
                    android:inputType="numberDecimal"
                    android:textColor="@color/White"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/NeedMark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/needmark"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="20sp"
                android:typeface="sans" />

            <EditText
                android:id="@+id/needmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/NeedMarkHint"
                android:inputType="number"
                android:paddingVertical="20dp"
                android:textColor="@color/White"
                android:textColorHint="@color/colorPrimaryLight"
                android:textSize="35sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/Result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/SI"
            android:paddingVertical="10dp"
            android:textColor="@color/White"
            android:textColorHint="@color/colorPrimaryLight"
            android:textSize="30sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/Exam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/Exam"
            android:paddingBottom="100dp"
            android:textColor="@color/White"
            android:textColorHint="@color/colorPrimaryLight"
            android:textSize="18sp"
            android:typeface="sans" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/calculate_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:background="@drawable/button_ripple"
                        android:scaleType="fitCenter"
                        android:src="@drawable/calc_button" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/clrbutton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="bottom"
                        android:background="@drawable/button_ripple"
                        android:scaleType="fitCenter"
                        android:src="@drawable/clearbut" />
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>